# lerobot-logsplitter

./: .gitignore  README.md
arduino/logsplitter_follower/: logsplitter_follower.ino
arduino/logsplitter_leader/: logsplitter_leader.ino
lerobot_robot_logsplitter_follower/: pyproject.toml
lerobot_robot_logsplitter_follower/lerobot_robot_logsplitter_follower/: __init__.py  config_logsplitter_follower.py  logsplitter_follower.py  logsplitter_motor.py
lerobot_teleoperator_logsplitter_leader/: pyproject.toml
lerobot_teleoperator_logsplitter_leader/lerobot_teleoperator_logsplitter_leader/: __init__.py  config_logsplitter_leader.py  logsplitter_leader.py  logsplitter_switches.py
