[project]
name = "lerobot_teleoperator_logsplitter_leader"
version = "0.0.1"
description = "Extending SO-101 Arm with controls for a mini logsplitter"
authors = [
    { name = "Aaron Epperly", email = "20829509+ayerone@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "lerobot>=0.4.3",
    "lerobot[feetech]"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
